# kinotab

./: .gitignore  README.md
kinotab_back/: manage.py  requirements.txt  setup.cfg  setup.py
kinotab_back/collection/: models.py  serializers.py  urls.py  views.py
kinotab_back/collection/migrations/: 0001_initial.py
kinotab_back/kinotab/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
kinotab_back/movie/: models.py  serializers.py  urls.py  views.py
kinotab_back/movie/migrations/: 0001_initial.py
kinotab_back/profiles/: models.py  serializers.py  signals.py  urls.py  views.py
kinotab_back/profiles/migrations/: 0001_initial.py  0002_auto_20200604_1513.py
kinotab_front/: package-lock.json  package.json
kinotab_front/configs/: webpack.dev.js
kinotab_front/src/: index.html  index.tsx  interface.ts  styles.scss
kinotab_front/src/authorization/: actions.tsx  constants.ts  interfaces.ts  reducers.tsx
kinotab_front/src/authorization/components/Login/: index.tsx
kinotab_front/src/authorization/components/Registration/: index.tsx
kinotab_front/src/authorization/containers/SignIn/: index.tsx
kinotab_front/src/authorization/containers/SignUp/: index.tsx
kinotab_front/src/mainPage/: actions.tsx  constants.ts  interfaces.ts  reducers.ts
kinotab_front/src/mainPage/containers/MainPage/: index.tsx
