[metadata]
name = git_watcher
version = 0.1.0
url = https://github.com/garage-team/kinotab
description = Home library of movies and other contents

[options]
packages = find:
python_requires = >= 3.7

[pycodestyle]
max_line_length = 100

[pylama]
ignore = W503 #  break before a binary operator
skip = */migrations/*

[pylama:*/apps.py]
ignore = W0611
# ignore: imported but unused

[pylama:*/admin.py]
ignore = W0611
# ignore: imported but unused
